test/libsolidity/syntaxTests/structs/struct_var_member.sol
contract C {
	struct S {
		var x;
	}
}
// ----
// ParserError: (27-30): Expected explicit type name.
